# uav-autonomous-flight-stack

./: .gitignore  README.md
SKBT-Depth/: .gitignore  README.md
SKBT-Depth/Px4_Paras/: v1.14_paras_flow.params  v1.14_paras_noflow.params
SKBT-Depth/shfiles/: launch.sh  record_circle.sh  record_column.sh  record_tunnel.sh  takeoff_test_T265.sh
SKBT-Depth/src/control/px4ctrl/: CMakeLists.txt  package.xml
SKBT-Depth/src/control/px4ctrl/src/: PX4CtrlFSM.cpp  PX4CtrlParam.cpp  controller.h  input.cpp  input.h  px4ctrl_node.cpp
SKBT-Depth/src/detection/barrier_detection/: CMakeLists.txt  package.xml
SKBT-Depth/src/detection/barrier_detection/include/: CSF.h
SKBT-Depth/src/detection/barrier_detection/src/: CSF.cpp  test.cpp  testv1.cpp  testv2.cpp
SKBT-Depth/src/detection/circle_detection/src/: circle_detection.cpp
SKBT-Depth/src/detection/pointcloud_detection/: CMakeLists.txt  package.xml
SKBT-Depth/src/detection/pointcloud_detection/include/: CSF_Lidar.h
SKBT-Depth/src/detection/pointcloud_detection/launch/: pointcloud_test.launch
SKBT-Depth/src/detection/pointcloud_detection/src/: CSF_Lidar.cpp  Test.cpp  Test_oneStep.cpp
SKBT-Depth/src/location/VINS-Fusion/config/: AdaptWing.yaml
SKBT-Depth/src/location/VINS-Fusion/script/: img_tran.py
SKBT-Depth/src/location/odom_fusion/: CMakeLists.txt
SKBT-Depth/src/location/odom_fusion/include/odom_fusion/: odom_fusion.h
SKBT-Depth/src/location/odom_fusion/launch/: odom_fusion.launch
SKBT-Depth/src/location/odom_fusion/src/: TF_Test.cpp  odom_fusion_node.cpp
SKBT-Depth/src/location/rtk/src/: dingwei.py
SKBT-Depth/src/planner/Apriltag/apriltag_ros/apriltag_ros/: CMakeLists.txt
SKBT-Depth/src/planner/Apriltag/apriltag_ros/apriltag_ros/config/: tags.yaml
SKBT-Depth/src/planner/Apriltag/apriltag_ros/apriltag_ros/launch/: continuous_detection.launch
SKBT-Depth/src/planner/Utils/utils/uav_utils/: CMakeLists.txt  package.xml
SKBT-Depth/src/planner/Utils/visual_utils/src/: planning_visualization.cpp
SKBT-Depth/src/planner/console/: CMakeLists.txt  package.xml
SKBT-Depth/src/planner/console/include/console/: console.hpp
SKBT-Depth/src/planner/console/launch/: fly.launch  visual.rviz
SKBT-Depth/src/planner/console/src/: console_Test.cpp  console_node.cpp  console_onestep.cpp
SKBT-Depth/src/planner/minimumsnap/: CMakeLists.txt  package.xml
SKBT-Depth/src/planner/minimumsnap/config/: minimumsnap_Para.yaml
SKBT-Depth/src/planner/minimumsnap/include/: Minimumsnap.hpp
SKBT-Depth/src/planner/minimumsnap/launch/: rviz.launch  test.launch  visual.rviz
SKBT-Depth/src/planner/minimumsnap/shellfiles/: Test.sh
SKBT-Depth/src/planner/minimumsnap/src/: Minimumsnap.cpp  Test.cpp
SKBT-Lidar/: README.md
SKBT-Lidar/Px4_Paras/: v1.12.0.params
SKBT-Lidar/shfiles/: lidar_test.sh  record.sh  record_circle_lidar.sh  record_column_lidar.sh  record_level3_lidar.sh  record_tunnel_lidar.sh
SKBT-Lidar/src/common/console/: CMakeLists.txt  package.xml
SKBT-Lidar/src/common/console/msg/: ConsoleState.msg
SKBT-Lidar/src/common/uav_utils/include/uav_utils/: converters.h
SKBT-Lidar/src/control/px4ctrl/: CMakeLists.txt  package.xml
SKBT-Lidar/src/control/px4ctrl/config/: ctrl_param_fpv.yaml
SKBT-Lidar/src/control/px4ctrl/src/: PX4CtrlFSM.h  PX4CtrlParam.h  controller.cpp
SKBT-Lidar/src/detection/pointcloud_detection/config/: Cloth_Para.yaml
SKBT-Lidar/src/detection/pointcloud_detection/src/: Testv1.cpp  save_pointcloud.cpp
SKBT-Lidar/src/location/faster-lio/config/: avia.yaml
SKBT-Lidar/src/location/odom_fusion/: package.xml
SKBT-Lidar/src/location/odom_fusion/msg/: OdomStamp.msg
SKBT-Lidar/src/location/odom_fusion/src/: odom_fusion.cpp
